* Inner member classes declared in class X are automatically prepared for test when X is prepared for test.
* PowerMock now follows the semantics of EasyMock verification. This means that invoking an unexpected method of a mock object will cause an AssertionError to be thrown even if verify has been called prior to the method invocation.

Change log 1.1.1 (released 2008-12-15)                                                                     
--------------------------------------
* Fixed maven version issues for the junit4-legacy module and junit3 module.
* Fixed a major issue with PowerMock test listeners. The PowerMockTestListener.beforeTestMethod(..) was invoked too late which could cause a NullPointerException when invoking setup methods.
* Updated javadoc (some errors in the java doc text).

Change log 1.1 (released 2008-12-12)
------------------------------------
* Only signed classes are loaded by the signed supporting CGLib naming policy.
* Whitebox.invokeConstructor now propagates InvocationTargetExceptions correctly.
* Restructured release assemblies to include just the correct things.
* Set sources:jar and javadocs:jar to run on every build.
* LoggerTest now creates its test log file in ./target/ directory instead of ./
* Major refactoring of project structure, it's now be possible to use PowerMock as a foundation for testability for other mock frameworks. PowerMock core is no longer coupled to EasyMock.
* Fixed a serious issue with the classloading hierarchy of PowerMock's JUnit runners.
* Implemented support for PowerMock test listeners, to create a listener you need to implement the org.powermock.core.spi.PowerMockTestListener interface and pass the implementation class to the PowerMockListener annotation.